<resources>
    <string name="app_name">Mezo Translator</string>
    <string name="translate_btn">Translate</string>
    <string name="enter_text_to_translate">Enter text to translate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_language_search">Select Language</string>
    <string name="clear_all_history_btn">Clear All</string>
    <string name="history_of_translation">History of Translation</string>
    <string name="bin_is_empty_text">It\'s Empty, No History</string>
    <string name="translator_home_btn">Translator</string>
    <string name="translator_home_sub_btn">Translate your speech or your words</string>
    <string name="camera_home_btn">camera</string>
    <string name="camera_home_sup_btn">Take a Picture and Translate It</string>
    <string name="history_home_btn">history</string>
    <string name="history_home_sups_btn">Show All your Previous Translations</string>
    <string name="phrases_home_btn">Book of Phrases</string>
    <string name="phrase_home_subs_btn">Learn Popular Phrases</string>
    <string name="chat_home_btn">Chat</string>
    <string name="chat_home_subs_btn">Voice Chat with All Languages</string>
    <string name="settings_home_btn">Settings</string>
    <string name="about_home_btn">About</string>
    <string name="share_home_btn">Share</string>
    <string name="premium_home_btn">Premium</string>
    <string name="logout_home_btn">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mezo_app_logo_descrption">Mezo App Logo</string>
    <string name="i_accept_the">I accept the</string>
    <string name="continue_btn">Continue</string>
    <string name="write_here_chatbox">write here</string>
    <string name="clipboard_copy">Word copied to clipboard</string>
    <string name="no_translatoin_for_this_language">No Translation for this language for now</string>
    <string name="app_theme">App Themes</string>
    <string name="app_language">APP Language</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="native_add_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="buy_btn">buy now \nfor 4.99 forever</string>
    <string name="restore_btn">Restore Subscription</string>
</resources>