<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_crown"
            android:title="@string/premium_home_btn"
            />

        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_translate"
            android:title="@string/translator_home_btn"
            app:tint="?attr/icon"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/camera_home_btn"
            app:tint="?attr/icon"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_home_btn"
            app:tint="?attr/icon"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_home_btn"
            app:tint="?attr/icon"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_home_btn"
            app:tint="?attr/icon"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_home_btn"
            app:tint="?attr/icon"/>


    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_home_btn"
                app:tint="?attr/icon"/>
        </menu>
    </item>



</menu>