<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="?attr/cardForegroundColor"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_back"
            app:tint="?attr/backgroundColor"

            />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/inria_sans_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="?attr/backgroundColor"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_mezo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Premium Version"
        android:textSize="20dp"
        android:textColor="?attr/textFillColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forever"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="?attr/textFillColor"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:src="@drawable/ic_signs"
                app:tint="?attr/icon"/>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20px"
                android:layout_weight="10"
                android:layout_gravity="center_vertical|end"
                android:text="100% No ADs"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_camera"
                app:tint="?attr/icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginStart="20px"
                android:layout_gravity="center_vertical"
                android:text="Camera Translate"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_mic"
                app:tint="?attr/icon"/>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20px"
                android:layout_weight="10"
                android:layout_gravity="center_vertical"
                android:text="Priority Support"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"/>

        </LinearLayout>

    </LinearLayout>

<!--    <RelativeLayout-->
<!--        android:id="@+id/relativeLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48sp"-->
<!--        android:background="@drawable/googlepay_button_background"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:padding="2sp">-->


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:duplicateParentState="true"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="vertical"-->
<!--            android:weightSum="2">-->


<!--            <ImageView-->
<!--                android:id="@+id/googlePayButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:duplicateParentState="true"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:src="@drawable/googlepay_button_content" />-->
<!--        </LinearLayout>-->


<!--    </RelativeLayout>-->


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/consume_buy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_btn"
        android:background="@drawable/roundcorner"
        android:textColor="@color/white"

        />


        <Button
            android:id="@+id/btn_restore"
            android:textSize="12dp"
            android:fontFamily="@font/inria_sans_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_btn"
            android:background="@android:color/transparent"
            android:textColor="?icon"
            />







</LinearLayout>